src/test/ui/issues/issue-26056.stderr
error[E0038]: the trait `Map` cannot be made into an object
  --> $DIR/issue-26056.rs:20:13
   |
LL | trait Map: MapLookup<<Self as Map>::Key> {
   |       ---  ----------------------------- ...because it uses `Self` as a type parameter in this
   |       |
   |       this trait cannot be made into an object...
...
LL |         as &dyn Map<Key=u32,MapValue=u32>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Map` cannot be made into an object

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
